--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     margin:0;
-    padding:0;
 }
 #top{
     background:#075e54;
@@ -14,15 +13,12 @@ body {
     box-shadow:0 3px 3px 0px rgba(0,0,0,0.5);
     display:none;
 }
-#top a,b,c{
+#top b{
     color:white;
     float:left;
     margin-top:20px;
-    margin-left:19px;
+    margin-left:20px;
     font-size:20px;
-}
-.clear{
-    clear: both;
 }
 .fa-search,.fa-ellipsis-v{
     color:white;
